[package]
name = "estv"
version = "1.3.0"
description = "ESTV Token Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "estv"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.32.1"
